# util2

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  DOCS.md  README.md  docs.md
include/util2/: aligned_malloc.hpp  array_view.hpp  bufferptr.hpp  file.hpp  flat_hash.hpp  hash.hpp  pool.hpp  print.hpp  random.hpp  runtime_constptr.hpp  string.hpp  time.hpp  type_trait.hpp  vec2.hpp
include/util2/C/: aligned_malloc.h  base_type.h  buffer.h  compiler_warning.h  debug_macro.h  debugbreak.h  env.h  file.h  ifcrash2.h  image2.h  macro.h  marker4.h  mt19937ii.h  murmur64a.h  platform.h  print.h  random.h  sleep.h  static_assert.h  string.h  thread_sleep.h  util2_api.h  util2_extern.h  varg_count.h
include/util2/C/sleep/: sleep_linux.h  sleep_osx.h  sleep_win32.h
source/: aligned_malloc.cpp  file.cpp  pool.cpp  print.cpp  random.cpp  time.cpp  vec2.cpp
source/C/: aligned_malloc.c  buffer.c  debugbreak.c  env.c  file.c  ifcrash2.c  image2.c  marker4.c  mt19937ii.c  print.c  random.c  sleep.c  stb_image.c  thread_sleep.c  tinycthread.c
source/C/sleep/: sleep_linux.c  sleep_osx.c  sleep_win32.c
